--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -2,14 +2,97 @@
     display: flex;
     width: 100%;
 }
+
 .wrapper{
     display: flex;
     flex: 1;
+    padding: 0 20px;
 }
+
 .form-container{
     display: flex;
     flex: 1.25;
+    width: 100%;
+    justify-content: space-around;
+    border-right: 1px solid rgb(197, 197, 197);
 }
+
+.form{
+    font-family: 'Roboto', sans-serif;
+    margin-top: 20px;
+    width: 95%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 40px;
+}
+
+.label-input-container{
+    width: calc(100% - 20px);
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    padding: 0 10px;
+
+}
+
+.date-time-fields-container{
+    width: calc(100% - 20px);
+    display: flex;
+    display: flex;
+    row-gap: 10px;
+    justify-content: space-around;
+    padding: 0 10px;
+    column-gap: 20px;
+}
+
+.date-time-fields-container .label-input-container{
+    padding: 0;
+}
+
+.label-field{
+    width: 100%;
+    align-items: self-start;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.input-field{
+    background-color: #C6B5F4;
+    width: calc(100% - 20px);
+    height: 45px;
+    border: 0.1px solid rgb(202, 202, 202);
+    border: none;
+    outline: none;
+        border-radius: 4px;
+    box-shadow: 
+        rgba(77, 70, 70, 0.2) 0px 3px 3px -2px,
+        rgba(0, 0, 0, 0.14) 0px 3px 4px 0px,
+        rgba(0, 0, 0, 0.12) 0px 1px 8px 0px;
+    padding: 0 10px;
+}
+
+.submit-button{
+    width: 100%;
+    margin-top: 10px;
+    background-color: #a379fd;
+    height: 40px;
+    border:none;
+    outline: none;
+        border-radius: 4px;
+    box-shadow: 
+        rgba(0, 0, 0, 0.2) 0px 3px 3px -2px,
+        rgba(0, 0, 0, 0.14) 0px 3px 4px 0px,
+        rgba(0, 0, 0, 0.12) 0px 1px 8px 0px;
+    font-size: 16px;
+    font-weight: 400;
+    cursor: pointer;
+
+}
+
+
 .notes-container{
     flex: 3;
 }
